--- a/simulations.html
+++ b/simulations.html
@@ -328,7 +328,7 @@ covered(Dtest, rtest)
 # Example 1: Run Simulations
 
 - Often your simulations will be in a big `for` loop. 
-  + In R, functions like `map`, `lapply`, and `replicate1` are all useful. 
+  + In R, functions like `map`, `lapply`, and `replicate` are all useful. 
   
 - Sometimes there will be layers of loops: 
   - Outside loop: simulation parameters (sample size)
